<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-condensed-medium"
        app:cornerRadius="0dp"
        app:layout_constraintHeight_percent="0.055"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/registrarse"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-condensed-medium"
        app:cornerRadius="0dp"
        app:layout_constraintHeight_percent="0.055"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/salir"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-condensed-medium"
        app:cornerRadius="0dp"
        app:layout_constraintHeight_percent="0.055"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/elorrieta"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/darkGreen"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextUser"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>